Correct tests for #query_monster_names to use objects instead of hash

--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_names_returns_all_monsters_name_and_index_only.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_names_returns_all_monsters_name_and_index_only.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706973240&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=wJKdwbY0He7N4DAqj%2BBRh0HwSiML38ZEh0BK4pR487w%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706975897&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ywe75xk%2FIYeCtw8Q%2Bk5s3dISVrqoQFf5jh%2B915GTEew%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706973240&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=wJKdwbY0He7N4DAqj%2BBRh0HwSiML38ZEh0BK4pR487w%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1706975897&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ywe75xk%2FIYeCtw8Q%2Bk5s3dISVrqoQFf5jh%2B915GTEew%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 15:14:00 GMT
+      - Sat, 03 Feb 2024 15:58:17 GMT
       X-Ratelimit-Reset:
-      - '1706973241'
+      - '1706975899'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 15:14:00 GMT
+  recorded_at: Sat, 03 Feb 2024 15:58:17 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
       string: '{"query":"query GraphQL__Client__OperationDefinition_33320 {\n  monsters
-        {\n    name\n    index\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_33320","variables":{}}'
+        {\n    index\n    name\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_33320","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706973240&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=wJKdwbY0He7N4DAqj%2BBRh0HwSiML38ZEh0BK4pR487w%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706975897&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ywe75xk%2FIYeCtw8Q%2Bk5s3dISVrqoQFf5jh%2B915GTEew%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706973240&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=wJKdwbY0He7N4DAqj%2BBRh0HwSiML38ZEh0BK4pR487w%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1706975897&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ywe75xk%2FIYeCtw8Q%2Bk5s3dISVrqoQFf5jh%2B915GTEew%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,55 +212,55 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 15:14:00 GMT
+      - Sat, 03 Feb 2024 15:58:17 GMT
       X-Ratelimit-Reset:
-      - '1706973242'
+      - '1706975899'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
       - '4566'
       Etag:
-      - W/"11d6-ZojmDKqaKEZNIlsoYVrfa6g9Nt8"
+      - W/"11d6-XIUfFg6UoH3bjRaGDmq7SaLHw3w"
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"monsters":[{"name":"Adult Gold Dragon","index":"adult-gold-dragon"},{"name":"Ancient
-        Brass Dragon","index":"ancient-brass-dragon"},{"name":"Aboleth","index":"aboleth"},{"name":"Adult
-        White Dragon","index":"adult-white-dragon"},{"name":"Adult Bronze Dragon","index":"adult-bronze-dragon"},{"name":"Balor","index":"balor"},{"name":"Black
-        Pudding","index":"black-pudding"},{"name":"Bronze Dragon Wyrmling","index":"bronze-dragon-wyrmling"},{"name":"Deer","index":"deer"},{"name":"Animated
-        Armor","index":"animated-armor"},{"name":"Ankheg","index":"ankheg"},{"name":"Bulette","index":"bulette"},{"name":"Cockatrice","index":"cockatrice"},{"name":"Commoner","index":"commoner"},{"name":"Cloud
-        Giant","index":"cloud-giant"},{"name":"Assassin","index":"assassin"},{"name":"Axe
-        Beak","index":"axe-beak"},{"name":"Berserker","index":"berserker"},{"name":"Barbed
-        Devil","index":"barbed-devil"},{"name":"Archmage","index":"archmage"},{"name":"Crocodile","index":"crocodile"},{"name":"Chuul","index":"chuul"},{"name":"Cultist","index":"cultist"},{"name":"Ancient
-        Green Dragon","index":"ancient-green-dragon"},{"name":"Adult Silver Dragon","index":"adult-silver-dragon"},{"name":"Behir","index":"behir"},{"name":"Bandit","index":"bandit"},{"name":"Brass
-        Dragon Wyrmling","index":"brass-dragon-wyrmling"},{"name":"Black Dragon Wyrmling","index":"black-dragon-wyrmling"},{"name":"Cat","index":"cat"},{"name":"Crab","index":"crab"},{"name":"Awakened
-        Tree","index":"awakened-tree"},{"name":"Androsphinx","index":"androsphinx"},{"name":"Bat","index":"bat"},{"name":"Centaur","index":"centaur"},{"name":"Copper
-        Dragon Wyrmling","index":"copper-dragon-wyrmling"},{"name":"Darkmantle","index":"darkmantle"},{"name":"Ancient
-        White Dragon","index":"ancient-white-dragon"},{"name":"Black Bear","index":"black-bear"},{"name":"Ancient
-        Silver Dragon","index":"ancient-silver-dragon"},{"name":"Awakened Shrub","index":"awakened-shrub"},{"name":"Badger","index":"badger"},{"name":"Azer","index":"azer"},{"name":"Blink
-        Dog","index":"blink-dog"},{"name":"Bugbear","index":"bugbear"},{"name":"Chain
-        Devil","index":"chain-devil"},{"name":"Clay Golem","index":"clay-golem"},{"name":"Cult
-        Fanatic","index":"cult-fanatic"},{"name":"Adult Green Dragon","index":"adult-green-dragon"},{"name":"Acolyte","index":"acolyte"},{"name":"Bearded
-        Devil","index":"bearded-devil"},{"name":"Adult Red Dragon","index":"adult-red-dragon"},{"name":"Blood
-        Hawk","index":"blood-hawk"},{"name":"Constrictor Snake","index":"constrictor-snake"},{"name":"Death
-        Dog","index":"death-dog"},{"name":"Couatl","index":"couatl"},{"name":"Adult
-        Brass Dragon","index":"adult-brass-dragon"},{"name":"Ancient Bronze Dragon","index":"ancient-bronze-dragon"},{"name":"Air
-        Elemental","index":"air-elemental"},{"name":"Boar","index":"boar"},{"name":"Ancient
-        Blue Dragon","index":"ancient-blue-dragon"},{"name":"Ancient Copper Dragon","index":"ancient-copper-dragon"},{"name":"Ape","index":"ape"},{"name":"Blue
-        Dragon Wyrmling","index":"blue-dragon-wyrmling"},{"name":"Adult Copper Dragon","index":"adult-copper-dragon"},{"name":"Cloaker","index":"cloaker"},{"name":"Ancient
-        Gold Dragon","index":"ancient-gold-dragon"},{"name":"Ancient Red Dragon","index":"ancient-red-dragon"},{"name":"Camel","index":"camel"},{"name":"Chimera","index":"chimera"},{"name":"Adult
-        Black Dragon","index":"adult-black-dragon"},{"name":"Ancient Black Dragon","index":"ancient-black-dragon"},{"name":"Baboon","index":"baboon"},{"name":"Bone
-        Devil","index":"bone-devil"},{"name":"Adult Blue Dragon","index":"adult-blue-dragon"},{"name":"Basilisk","index":"basilisk"},{"name":"Bandit
-        Captain","index":"bandit-captain"},{"name":"Brown Bear","index":"brown-bear"},{"name":"Dragon
-        Turtle","index":"dragon-turtle"},{"name":"Eagle","index":"eagle"},{"name":"Dryad","index":"dryad"},{"name":"Flying
-        Snake","index":"flying-snake"},{"name":"Dire Wolf","index":"dire-wolf"},{"name":"Giant
-        Eagle","index":"giant-eagle"},{"name":"Deva","index":"deva"},{"name":"Giant
-        Lizard","index":"giant-lizard"},{"name":"Giant Weasel","index":"giant-weasel"},{"name":"Imp","index":"imp"},{"name":"Killer
-        Whale","index":"killer-whale"},{"name":"Ghast","index":"ghast"},{"name":"Hawk","index":"hawk"},{"name":"Dretch","index":"dretch"},{"name":"Druid","index":"druid"},{"name":"Flying
-        Sword","index":"flying-sword"},{"name":"Giant Crocodile","index":"giant-crocodile"},{"name":"Giant
-        Vulture","index":"giant-vulture"},{"name":"Gibbering Mouther","index":"gibbering-mouther"},{"name":"Griffon","index":"griffon"},{"name":"Lamia","index":"lamia"},{"name":"Ghoul","index":"ghoul"}]}}
+      string: '{"data":{"monsters":[{"index":"adult-gold-dragon","name":"Adult Gold
+        Dragon"},{"index":"ancient-brass-dragon","name":"Ancient Brass Dragon"},{"index":"aboleth","name":"Aboleth"},{"index":"adult-white-dragon","name":"Adult
+        White Dragon"},{"index":"adult-bronze-dragon","name":"Adult Bronze Dragon"},{"index":"balor","name":"Balor"},{"index":"black-pudding","name":"Black
+        Pudding"},{"index":"bronze-dragon-wyrmling","name":"Bronze Dragon Wyrmling"},{"index":"deer","name":"Deer"},{"index":"animated-armor","name":"Animated
+        Armor"},{"index":"ankheg","name":"Ankheg"},{"index":"bulette","name":"Bulette"},{"index":"cockatrice","name":"Cockatrice"},{"index":"commoner","name":"Commoner"},{"index":"cloud-giant","name":"Cloud
+        Giant"},{"index":"assassin","name":"Assassin"},{"index":"axe-beak","name":"Axe
+        Beak"},{"index":"berserker","name":"Berserker"},{"index":"barbed-devil","name":"Barbed
+        Devil"},{"index":"archmage","name":"Archmage"},{"index":"crocodile","name":"Crocodile"},{"index":"chuul","name":"Chuul"},{"index":"cultist","name":"Cultist"},{"index":"ancient-green-dragon","name":"Ancient
+        Green Dragon"},{"index":"adult-silver-dragon","name":"Adult Silver Dragon"},{"index":"behir","name":"Behir"},{"index":"bandit","name":"Bandit"},{"index":"brass-dragon-wyrmling","name":"Brass
+        Dragon Wyrmling"},{"index":"black-dragon-wyrmling","name":"Black Dragon Wyrmling"},{"index":"cat","name":"Cat"},{"index":"crab","name":"Crab"},{"index":"awakened-tree","name":"Awakened
+        Tree"},{"index":"androsphinx","name":"Androsphinx"},{"index":"bat","name":"Bat"},{"index":"centaur","name":"Centaur"},{"index":"copper-dragon-wyrmling","name":"Copper
+        Dragon Wyrmling"},{"index":"darkmantle","name":"Darkmantle"},{"index":"ancient-white-dragon","name":"Ancient
+        White Dragon"},{"index":"black-bear","name":"Black Bear"},{"index":"ancient-silver-dragon","name":"Ancient
+        Silver Dragon"},{"index":"awakened-shrub","name":"Awakened Shrub"},{"index":"badger","name":"Badger"},{"index":"azer","name":"Azer"},{"index":"blink-dog","name":"Blink
+        Dog"},{"index":"bugbear","name":"Bugbear"},{"index":"chain-devil","name":"Chain
+        Devil"},{"index":"clay-golem","name":"Clay Golem"},{"index":"cult-fanatic","name":"Cult
+        Fanatic"},{"index":"adult-green-dragon","name":"Adult Green Dragon"},{"index":"acolyte","name":"Acolyte"},{"index":"bearded-devil","name":"Bearded
+        Devil"},{"index":"adult-red-dragon","name":"Adult Red Dragon"},{"index":"blood-hawk","name":"Blood
+        Hawk"},{"index":"constrictor-snake","name":"Constrictor Snake"},{"index":"death-dog","name":"Death
+        Dog"},{"index":"couatl","name":"Couatl"},{"index":"adult-brass-dragon","name":"Adult
+        Brass Dragon"},{"index":"ancient-bronze-dragon","name":"Ancient Bronze Dragon"},{"index":"air-elemental","name":"Air
+        Elemental"},{"index":"boar","name":"Boar"},{"index":"ancient-blue-dragon","name":"Ancient
+        Blue Dragon"},{"index":"ancient-copper-dragon","name":"Ancient Copper Dragon"},{"index":"ape","name":"Ape"},{"index":"blue-dragon-wyrmling","name":"Blue
+        Dragon Wyrmling"},{"index":"adult-copper-dragon","name":"Adult Copper Dragon"},{"index":"cloaker","name":"Cloaker"},{"index":"ancient-gold-dragon","name":"Ancient
+        Gold Dragon"},{"index":"ancient-red-dragon","name":"Ancient Red Dragon"},{"index":"camel","name":"Camel"},{"index":"chimera","name":"Chimera"},{"index":"adult-black-dragon","name":"Adult
+        Black Dragon"},{"index":"ancient-black-dragon","name":"Ancient Black Dragon"},{"index":"baboon","name":"Baboon"},{"index":"bone-devil","name":"Bone
+        Devil"},{"index":"adult-blue-dragon","name":"Adult Blue Dragon"},{"index":"basilisk","name":"Basilisk"},{"index":"bandit-captain","name":"Bandit
+        Captain"},{"index":"brown-bear","name":"Brown Bear"},{"index":"dragon-turtle","name":"Dragon
+        Turtle"},{"index":"eagle","name":"Eagle"},{"index":"dryad","name":"Dryad"},{"index":"flying-snake","name":"Flying
+        Snake"},{"index":"dire-wolf","name":"Dire Wolf"},{"index":"giant-eagle","name":"Giant
+        Eagle"},{"index":"deva","name":"Deva"},{"index":"giant-lizard","name":"Giant
+        Lizard"},{"index":"giant-weasel","name":"Giant Weasel"},{"index":"imp","name":"Imp"},{"index":"killer-whale","name":"Killer
+        Whale"},{"index":"ghast","name":"Ghast"},{"index":"hawk","name":"Hawk"},{"index":"dretch","name":"Dretch"},{"index":"druid","name":"Druid"},{"index":"flying-sword","name":"Flying
+        Sword"},{"index":"giant-crocodile","name":"Giant Crocodile"},{"index":"giant-vulture","name":"Giant
+        Vulture"},{"index":"gibbering-mouther","name":"Gibbering Mouther"},{"index":"griffon","name":"Griffon"},{"index":"lamia","name":"Lamia"},{"index":"ghoul","name":"Ghoul"}]}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 15:14:00 GMT
+  recorded_at: Sat, 03 Feb 2024 15:58:17 GMT
 recorded_with: VCR 6.2.0
