--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707018144&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=5zzqFh1nA1e7h7p%2B97Law5Ls0gF3CG2yw9BRCv8ein8%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707018144&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=5zzqFh1nA1e7h7p%2B97Law5Ls0gF3CG2yw9BRCv8ein8%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 16:15:21 GMT
+      - Sun, 04 Feb 2024 03:42:24 GMT
       X-Ratelimit-Reset:
-      - '1706976922'
+      - '1707018145'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,17 +171,17 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 16:15:22 GMT
+  recorded_at: Sun, 04 Feb 2024 03:42:24 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_53200($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_53180($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    image\n    size\n    type\n    alignment\n    armor_class
-        {\n      value\n    }\n    speed {\n      walk\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    languages\n    special_abilities
+        {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    languages\n    special_abilities
         {\n      desc\n    }\n    actions {\n      desc\n    }\n    legendary_actions
-        {\n      desc\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_53200","variables":{}}'
+        {\n      desc\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_53180","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -199,9 +199,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706976922&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=sdMmImfZxMoPBN6ywsgGk1yRA5ThldFfsfvv9g%2BZ5ow%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707018144&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=5zzqFh1nA1e7h7p%2B97Law5Ls0gF3CG2yw9BRCv8ein8%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706976922&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=sdMmImfZxMoPBN6ywsgGk1yRA5ThldFfsfvv9g%2BZ5ow%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707018144&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=5zzqFh1nA1e7h7p%2B97Law5Ls0gF3CG2yw9BRCv8ein8%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -215,22 +215,22 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 16:15:22 GMT
+      - Sun, 04 Feb 2024 03:42:24 GMT
       X-Ratelimit-Reset:
-      - '1706976923'
+      - '1707018145'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '2416'
+      - '2431'
       Etag:
-      - W/"970-SrbYwbAerfdT1VmgbrF3BAEYWJU"
+      - W/"97f-d7O87v5ztxWxzGK8rswLZmyNBds"
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
       string: '{"data":{"monster":{"index":"adult-gold-dragon","name":"Adult Gold
         Dragon","image":null,"size":"HUGE","type":"DRAGON","alignment":"lawful good","armor_class":[{"value":19}],"speed":{"walk":"40
-        ft.","swim":"40 ft."},"hit_points":256,"strength":27,"dexterity":14,"constitution":25,"intelligence":16,"wisdom":15,"charisma":24,"languages":"Common,
+        ft.","fly":"80 ft.","swim":"40 ft."},"hit_points":256,"strength":27,"dexterity":14,"constitution":25,"intelligence":16,"wisdom":15,"charisma":24,"languages":"Common,
         Draconic","special_abilities":[{"desc":"The dragon can breathe air and water."},{"desc":"If
         the dragon fails a saving throw, it can choose to succeed instead."}],"actions":[{"desc":"The
         dragon can use its Frightful Presence. It then makes three attacks: one with
@@ -259,5 +259,5 @@ http_interactions:
         and be knocked prone. The dragon can then fly up to half its flying speed."}]}}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 16:15:22 GMT
+  recorded_at: Sun, 04 Feb 2024 03:42:24 GMT
 recorded_with: VCR 6.2.0
