--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_names_returns_all_monsters_name_and_index_only.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_names_returns_all_monsters_name_and_index_only.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707018143&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Op%2FC1kpDKwwLSWCg06EZK%2FzMYJ7ClU49rpVVd5KY03s%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707018143&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Op%2FC1kpDKwwLSWCg06EZK%2FzMYJ7ClU49rpVVd5KY03s%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 16:15:21 GMT
+      - Sun, 04 Feb 2024 03:42:23 GMT
       X-Ratelimit-Reset:
-      - '1706976922'
+      - '1707018144'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 16:15:21 GMT
+  recorded_at: Sun, 04 Feb 2024 03:42:23 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_33320 {\n  monsters
-        {\n    index\n    name\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_33320","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_33280 {\n  monsters
+        {\n    index\n    name\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_33280","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707018143&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Op%2FC1kpDKwwLSWCg06EZK%2FzMYJ7ClU49rpVVd5KY03s%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1706976921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=eU681IsEyXDLlA3%2BydMpDje338XRN5%2FNmiTnN%2Bu4hcw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707018143&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Op%2FC1kpDKwwLSWCg06EZK%2FzMYJ7ClU49rpVVd5KY03s%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sat, 03 Feb 2024 16:15:21 GMT
+      - Sun, 04 Feb 2024 03:42:23 GMT
       X-Ratelimit-Reset:
-      - '1706976922'
+      - '1707018144'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -262,5 +262,5 @@ http_interactions:
         Vulture"},{"index":"gibbering-mouther","name":"Gibbering Mouther"},{"index":"griffon","name":"Griffon"},{"index":"lamia","name":"Lamia"},{"index":"ghoul","name":"Ghoul"}]}}
 
         '
-  recorded_at: Sat, 03 Feb 2024 16:15:21 GMT
+  recorded_at: Sun, 04 Feb 2024 03:42:23 GMT
 recorded_with: VCR 6.2.0
