--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_list_returns_all_monsters_name_and_index_only.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_list_returns_all_monsters_name_and_index_only.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168560&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=qvRCMZ4Mj8bdM%2Fxfc%2FfAMZCF0p5DQ9yS2x%2BuAKoy0uQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168812&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lQMtKMWzpXLtlPt6iOVUXN2MyRObVOo0n1MF69nq8eY%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707168560&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=qvRCMZ4Mj8bdM%2Fxfc%2FfAMZCF0p5DQ9yS2x%2BuAKoy0uQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707168812&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lQMtKMWzpXLtlPt6iOVUXN2MyRObVOo0n1MF69nq8eY%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:29:20 GMT
+      - Mon, 05 Feb 2024 21:33:32 GMT
       X-Ratelimit-Reset:
-      - '1707168561'
+      - '1707168813'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:29:20 GMT
+  recorded_at: Mon, 05 Feb 2024 21:33:32 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_33360 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_33360","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_114940 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114940","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168560&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=qvRCMZ4Mj8bdM%2Fxfc%2FfAMZCF0p5DQ9yS2x%2BuAKoy0uQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168812&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lQMtKMWzpXLtlPt6iOVUXN2MyRObVOo0n1MF69nq8eY%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707168560&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=qvRCMZ4Mj8bdM%2Fxfc%2FfAMZCF0p5DQ9yS2x%2BuAKoy0uQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707168812&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=lQMtKMWzpXLtlPt6iOVUXN2MyRObVOo0n1MF69nq8eY%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:29:20 GMT
+      - Mon, 05 Feb 2024 21:33:32 GMT
       X-Ratelimit-Reset:
-      - '1707168562'
+      - '1707168813'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:29:20 GMT
+  recorded_at: Mon, 05 Feb 2024 21:33:32 GMT
 recorded_with: VCR 6.2.0
