--- a/spec/fixtures/vcr_cassettes/Queries_Monsters/_/returns_all_monsters.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monsters/_/returns_all_monsters.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707087697&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X9aiS6nokHMpC3Cb7syxGl9BM3kjeg5eZw4z7sYvHB8%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168811&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nQxnbUnY7tI%2BZGeqs9tsMwIXFbwdza12BnanKznZ0JA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707087697&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X9aiS6nokHMpC3Cb7syxGl9BM3kjeg5eZw4z7sYvHB8%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707168811&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nQxnbUnY7tI%2BZGeqs9tsMwIXFbwdza12BnanKznZ0JA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sun, 04 Feb 2024 23:01:37 GMT
+      - Mon, 05 Feb 2024 21:33:31 GMT
       X-Ratelimit-Reset:
-      - '1707087698'
+      - '1707168812'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Sun, 04 Feb 2024 23:01:37 GMT
+  recorded_at: Mon, 05 Feb 2024 21:33:31 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_74880 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_74880","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_95280 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_95280","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707087697&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X9aiS6nokHMpC3Cb7syxGl9BM3kjeg5eZw4z7sYvHB8%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707168811&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nQxnbUnY7tI%2BZGeqs9tsMwIXFbwdza12BnanKznZ0JA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707087697&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X9aiS6nokHMpC3Cb7syxGl9BM3kjeg5eZw4z7sYvHB8%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707168811&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nQxnbUnY7tI%2BZGeqs9tsMwIXFbwdza12BnanKznZ0JA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Sun, 04 Feb 2024 23:01:37 GMT
+      - Mon, 05 Feb 2024 21:33:31 GMT
       X-Ratelimit-Reset:
-      - '1707087699'
+      - '1707168812'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Sun, 04 Feb 2024 23:01:37 GMT
+  recorded_at: Mon, 05 Feb 2024 21:33:31 GMT
 recorded_with: VCR 6.2.0
