--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_list_returns_all_monsters_name_and_index_only.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_list_returns_all_monsters_name_and_index_only.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707170395&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=f7PgTNcbBkzUlI8otYhJ14LXbDaO0n%2F%2Bfy1H%2B0wcXqw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173008&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2WgyHv3vLPDVuETzThlnPNXVWdYDOLUxW2B4R8ZdaoU%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707170395&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=f7PgTNcbBkzUlI8otYhJ14LXbDaO0n%2F%2Bfy1H%2B0wcXqw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173008&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2WgyHv3vLPDVuETzThlnPNXVWdYDOLUxW2B4R8ZdaoU%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:59:55 GMT
+      - Mon, 05 Feb 2024 22:43:28 GMT
       X-Ratelimit-Reset:
-      - '1707170396'
+      - '1707173010'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:59:55 GMT
+  recorded_at: Mon, 05 Feb 2024 22:43:29 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_114960 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114960","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_114980 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114980","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707170395&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=f7PgTNcbBkzUlI8otYhJ14LXbDaO0n%2F%2Bfy1H%2B0wcXqw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173009&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=s%2F9xGMsdnrB0qqMXQjSIx3hDfVOS5MSKbXHS%2BKWME2A%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707170395&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=f7PgTNcbBkzUlI8otYhJ14LXbDaO0n%2F%2Bfy1H%2B0wcXqw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173009&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=s%2F9xGMsdnrB0qqMXQjSIx3hDfVOS5MSKbXHS%2BKWME2A%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:59:55 GMT
+      - Mon, 05 Feb 2024 22:43:29 GMT
       X-Ratelimit-Reset:
-      - '1707170396'
+      - '1707173011'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:59:55 GMT
+  recorded_at: Mon, 05 Feb 2024 22:43:29 GMT
 recorded_with: VCR 6.2.0
