--- a/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
+++ b/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707170391&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Voa4Z15yQs3T0oUGZvTXwZO0fKuvAk83WB8GjBYZ4sc%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=efsEvfq0GG%2BsUQLb5KRC1cpNoJ%2FmP69tFjch9ceuzdc%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707170391&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Voa4Z15yQs3T0oUGZvTXwZO0fKuvAk83WB8GjBYZ4sc%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=efsEvfq0GG%2BsUQLb5KRC1cpNoJ%2FmP69tFjch9ceuzdc%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:59:51 GMT
+      - Mon, 05 Feb 2024 22:43:25 GMT
       X-Ratelimit-Reset:
-      - '1707170393'
+      - '1707173007'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:59:52 GMT
+  recorded_at: Mon, 05 Feb 2024 22:43:25 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707170392&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nGXBDXoy%2F7hEzDQiw1CwD%2B6VIdcw2pTabdQVooBv0Bs%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707170392&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=nGXBDXoy%2F7hEzDQiw1CwD%2B6VIdcw2pTabdQVooBv0Bs%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707173006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1ONMSG%2FXVvYcHzknQaF4FCG99EQDhd1I6T0R0wS9t9g%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 21:59:52 GMT
+      - Mon, 05 Feb 2024 22:43:26 GMT
       X-Ratelimit-Reset:
-      - '1707170393'
+      - '1707173007'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 21:59:52 GMT
+  recorded_at: Mon, 05 Feb 2024 22:43:26 GMT
 recorded_with: VCR 6.2.0
