--- a/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
+++ b/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173905&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3KMuhuVmPyedLpkIIzV3ljFvkyvwqzF8lAYzUAIfF7I%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182816&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=sL6fDqr8XW6YdVojNSyiB%2FzPJEzju4MpQhdBdNZkZ0A%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173905&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3KMuhuVmPyedLpkIIzV3ljFvkyvwqzF8lAYzUAIfF7I%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707182816&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=sL6fDqr8XW6YdVojNSyiB%2FzPJEzju4MpQhdBdNZkZ0A%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:58:25 GMT
+      - Tue, 06 Feb 2024 01:26:56 GMT
       X-Ratelimit-Reset:
-      - '1707173906'
+      - '1707182818'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:58:26 GMT
+  recorded_at: Tue, 06 Feb 2024 01:26:56 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707173906&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uCLAnxUAbmiQnaVdl%2BcH9GA8vOPJoPw5DWxv8H2RIV8%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707182817&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=z1uBHWFBTQHgcorqm%2BhenqGPr7IrxaEUbDmzGXXUq2g%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707173906&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uCLAnxUAbmiQnaVdl%2BcH9GA8vOPJoPw5DWxv8H2RIV8%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707182817&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=z1uBHWFBTQHgcorqm%2BhenqGPr7IrxaEUbDmzGXXUq2g%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Mon, 05 Feb 2024 22:58:26 GMT
+      - Tue, 06 Feb 2024 01:26:57 GMT
       X-Ratelimit-Reset:
-      - '1707173907'
+      - '1707182819'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Mon, 05 Feb 2024 22:58:26 GMT
+  recorded_at: Tue, 06 Feb 2024 01:26:57 GMT
 recorded_with: VCR 6.2.0
