--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,52 @@
 # This config was automatically generated from your source code
 # Stacks detected: deps:ruby:.
-version: 2.1
+version: 2.1 # use CircleCI 2.1
 orbs:
-  ruby: circleci/ruby@2.0.1
-jobs:
-  test-ruby:
-    # Install gems, run rspec tests
-    docker:
-      - image: cimg/ruby:3.2.2-node
-      - image: circleci/postgres:9.5-alpine
-    environment:
-      RAILS_ENV: test
-    steps:
-      - checkout
-      - ruby/install-deps
+  node: circleci/node@5.0.0 # Needed for javascript runtime
+jobs: # a collection of steps
+  build-and-test: # runs not using Workflows must have a `build` job as entry point
+    docker: # run the steps with Docker
+      - image: circleci/ruby:2.7.4 # if you're using ruby version >= 3.0, use cimg/ruby:3.x.y
+        environment: # environment variables for primary container
+          BUNDLE_JOBS: 3
+          BUNDLE_RETRY: 3
+          BUNDLE_PATH: vendor/bundle
+          PGHOST: 127.0.0.1
+          PGUSER: postgres
+          RAILS_ENV: test
+      - image: circleci/postgres:11 # database image
+        environment: # environment variables for database, it is kind of obvious but it is important that they match with your test config in database.yml
+          POSTGRES_USER: postgres
+          POSTGRES_DB: tavern_keeper_test
+          POSTGRES_HOST_AUTH_METHOD: trust
+    steps: # a collection of executable commands
+      - checkout # special step to check out source code to working directory
+      # Which version of bundler?
+      - node/install:
+          install-yarn: true
+          node-version: '16.13'
       - run:
-          name: wait for DB
+          name: Force Bundler Version
+          command: |
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
+      - run:
+          name: Bundle Install
+          command: bundle install
+      - run:
+          name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
           name: Database setup
-          command: bundle exec rake db:test:prepare
+          command: bin/rails db:{create,migrate} --trace
       - run:
-          name: rspec test
+          name: Run rspec in parallel
           command: bundle exec rspec
+      # Save test results for timing analysis
+      - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: test_results
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for example deploy configs
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
