--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,6 @@ jobs: # a collection of steps
           command: '#e.g. ./deploy.sh'
 workflows:
   build-and-test:
-    jobs:
-      - test-ruby
-    # - deploy:
-    #     requires:
-    #       - test-ruby
+    filters:
+      branches:
+        only: main
