Fix so the createEncounter mutation functions, works on Postman, needs fixes in tests

--- a/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349918&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rw9JxZBVG0mLvbUYycB%2FegeIrMYgajYj7LGlO4RFcFY%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707409383&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=M%2FCUtqspPXDml%2Bw4NNdEqcto1ijcOy8WvHrkUca8fjo%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349918&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rw9JxZBVG0mLvbUYycB%2FegeIrMYgajYj7LGlO4RFcFY%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707409383&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=M%2FCUtqspPXDml%2Bw4NNdEqcto1ijcOy8WvHrkUca8fjo%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:58 GMT
+      - Thu, 08 Feb 2024 16:23:03 GMT
       X-Ratelimit-Reset:
-      - '1707349920'
+      - '1707409385'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:51:58 GMT
+  recorded_at: Thu, 08 Feb 2024 16:23:03 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_134040 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_134040","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_134100 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_134100","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349918&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rw9JxZBVG0mLvbUYycB%2FegeIrMYgajYj7LGlO4RFcFY%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707409383&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=M%2FCUtqspPXDml%2Bw4NNdEqcto1ijcOy8WvHrkUca8fjo%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349918&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rw9JxZBVG0mLvbUYycB%2FegeIrMYgajYj7LGlO4RFcFY%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707409383&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=M%2FCUtqspPXDml%2Bw4NNdEqcto1ijcOy8WvHrkUca8fjo%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:58 GMT
+      - Thu, 08 Feb 2024 16:23:04 GMT
       X-Ratelimit-Reset:
-      - '1707349920'
+      - '1707409386'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -308,5 +308,5 @@ http_interactions:
         evil"},{"index":"fire-elemental","name":"Fire Elemental","challenge_rating":5,"size":"LARGE","type":"ELEMENTAL","alignment":"neutral"}]}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:51:58 GMT
+  recorded_at: Thu, 08 Feb 2024 16:23:03 GMT
 recorded_with: VCR 6.2.0
