--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=6FIeRQErclhyykM3Pq3OS3WY6U6Tx1WLJ1Q%2BWZHcgPs%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707409386&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X2Bi8wN6psvzLI2MBYiZjzbROo0QIU60i%2B4xoM%2Bfpt4%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=6FIeRQErclhyykM3Pq3OS3WY6U6Tx1WLJ1Q%2BWZHcgPs%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707409386&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=X2Bi8wN6psvzLI2MBYiZjzbROo0QIU60i%2B4xoM%2Bfpt4%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:52:01 GMT
+      - Thu, 08 Feb 2024 16:23:06 GMT
       X-Ratelimit-Reset:
-      - '1707349923'
+      - '1707409388'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:01 GMT
+  recorded_at: Thu, 08 Feb 2024 16:23:07 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=6FIeRQErclhyykM3Pq3OS3WY6U6Tx1WLJ1Q%2BWZHcgPs%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707409387&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ev5pVSzQ0vdHzmIhBQRT7l70C2TFAj9oGmnmRqc%2FE%2FU%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349921&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=6FIeRQErclhyykM3Pq3OS3WY6U6Tx1WLJ1Q%2BWZHcgPs%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707409387&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ev5pVSzQ0vdHzmIhBQRT7l70C2TFAj9oGmnmRqc%2FE%2FU%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -224,9 +224,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:52:01 GMT
+      - Thu, 08 Feb 2024 16:23:07 GMT
       X-Ratelimit-Reset:
-      - '1707349923'
+      - '1707409389'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,19 +343,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:01 GMT
+  recorded_at: Thu, 08 Feb 2024 16:23:07 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_232580($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_232640($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_232580","variables":{"index":"goblin"}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_232640","variables":{"index":"goblin"}}'
     headers:
       Content-Type:
       - application/json
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349922&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=I8tip2nyJnOKwMofPauzOby8haihQj%2FoMy%2B9bJiV%2BWA%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707409388&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BNkqjwC2ku5VZX34k6o7ISxiAjqSsp7CrrYFi6Kc7BE%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349922&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=I8tip2nyJnOKwMofPauzOby8haihQj%2FoMy%2B9bJiV%2BWA%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707409388&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BNkqjwC2ku5VZX34k6o7ISxiAjqSsp7CrrYFi6Kc7BE%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,9 +389,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:52:02 GMT
+      - Thu, 08 Feb 2024 16:23:08 GMT
       X-Ratelimit-Reset:
-      - '1707349924'
+      - '1707409390'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -412,5 +412,5 @@ http_interactions:
         80/320 ft., one target. Hit: 5 (1d6 + 2) piercing damage."}],"legendary_actions":null,"condition_immunities":[]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:02 GMT
+  recorded_at: Thu, 08 Feb 2024 16:23:08 GMT
 recorded_with: VCR 6.2.0
