Add logic to circleci config for deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,3 +63,9 @@ workflows:
         filters:
           branches:
             only: main
+      - deploy:
+        requires:
+          - build-and-test
+        filters:
+          branches:
+            only: main
